feat(TDI-49155) Add sonar to Github PRs Dedicated bash for PR Inspired from https://github.com/Talend/apimgmt-jenkins-shared-libraries/blob/e8c355b599963dd5bbd249cf8cc2377195af7b7a/vars/buildBackendLib.groovy#L229 https://jira.talendforge.org/browse/TDI-49155